--- a/report/reporte_libro_bancos_views.xml
+++ b/report/reporte_libro_bancos_views.xml
@@ -77,14 +77,16 @@
                                 </tbody>
                             </table>
 
-                            <!-- <h2 t-field="doc.name"/>
-                            <p>From <span t-field="doc.start_date"/> to <span t-field="doc.end_date"/></p>
-                            <h3>Attendees:</h3>
-                            <ul>
-                                <t t-foreach="doc.attendee_ids" t-as="attendee">
-                                    <li><span t-field="attendee.name"/></li>
-                                </t>
-                            </ul> -->
+                            <div id="info">
+                              <p class="alignleft" style="float: left;"><strong>Hecho por:<br/> ___________________________</strong></p>
+                              <p class="alignright" style="float: right;"><strong>Revisado por:<br/> ___________________________</strong></p>
+                            </div>
+                            <div style="clear: both;"></div>
+                            <br/> 
+                            <div id="info">
+                              <p class="alignleft" style="float: left;"><strong></strong><strong>Vo. Bo.:<br/> ___________________________</strong></p>
+                            </div>
+                            <div style="clear: both;"></div>  
                         </div>
                     </t>
             </t>
