--- a/views/account_move_views.xml
+++ b/views/account_move_views.xml
@@ -7,6 +7,10 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
+                  <group id="header_right_group" position="inside">
+                      <field name="fel_serie" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                      <field name="fel_numero" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                  </group>                
                 <field name="fiscal_position_id" position="after">
                     <field name="liquidacion_id"/>
                     <field name="tipo_factura"/>
