Libro conciliacion bancaria

--- a/wizard/libro_conciliacion_bancaria_wizard_views.xml
+++ b/wizard/libro_conciliacion_bancaria_wizard_views.xml
@@ -29,7 +29,6 @@
                     view_mode="form"
                     target="new"/>
 
-        <menuitem action="launch_account_gt_libro_conciliacion_bancaria" id="menu_reporte_libro_conciliacion_bancaria" parent="account.menu_finance_reports"/>
-
+        <menuitem action="launch_account_gt_libro_conciliacion_bancaria" id="menu_reporte_libro_conciliacion_bancaria" parent="account_gt.menu_reporte_libros_gt"/>
     </data>
 </odoo>
