--- a/views/account_gt_views.xml
+++ b/views/account_gt_views.xml
@@ -24,13 +24,10 @@
                     <header>
                         <button name="conciliar_liquidacion" type="object"
                                 string="Conciliar liquidacion" class="oe_highlight"
-                                attrs="{'invisible': [('state', 'in', ['cancelado','conciliado'])]}"/>
+                                invisible="state in ['cancelado', 'conciliado']"/>
                         <button name="cancelar_liquidacion" type="object"
                                 string="Cancelar liquidacion" class="oe_highlight"
-                                attrs="{'invisible': [('state', 'in', ['borrador','cancelado'])]}"/>
-                        <!-- <button name="cambiar_borrador" type="object"
-                                string="Cambiar a borrador" class="oe_highlight"
-                                attrs="{'invisible': [('state', 'in', ['borrador','conciliado'])]}"/> -->
+                                invisible="state in ['borrador', 'cancelado']"/>
                         <field name="state" widget="statusbar" statusbar_visible="borrador,conciliado,cancelado"/>
                     </header>
                     <sheet>
