--- a/wizard/libro_compras_wizard_views.xml
+++ b/wizard/libro_compras_wizard_views.xml
@@ -28,12 +28,14 @@
             </field>
         </record>
 
-        <act_window id="launch_account_gt_libro_compras"
-                    name="Libro de compras"
-                    binding_model="account.account"
-                    res_model="account_gt.libro_compras.wizard"
-                    view_mode="form"
-                    target="new"/>
+        <record id="launch_account_gt_libro_compras" model="ir.actions.act_window">
+            <field name="name">Libro de compras</field>
+            <field name="res_model">account_gt.libro_compras.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="account_gt_libro_compras_form_view"/>
+            <field name="target">new</field>
+            <field name="binding_model_id" ref="account.model_account_account"/>
+        </record>
 
         <menuitem action="launch_account_gt_libro_compras" id="menu_reporte_libro_compras" parent="account_gt.menu_reporte_libros_gt"/>
 
