--- a/wizard/libro_diario_wizard_views.xml
+++ b/wizard/libro_diario_wizard_views.xml
@@ -28,12 +28,14 @@
         </field>
     </record>
 
-        <act_window id="launch_account_gt_libro_diario"
-                    name="Libro diario"
-                    binding_model="account.account"
-                    res_model="account_gt.libro_diario.wizard"
-                    view_mode="form"
-                    target="new"/>
+        <record id="launch_account_gt_libro_diario" model="ir.actions.act_window">
+            <field name="name">Libro diario</field>
+            <field name="res_model">account_gt.libro_diario.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="account_gt_libro_diario_form_view"/>
+            <field name="target">new</field>
+            <field name="binding_model_id" ref="account.model_account_account"/>
+        </record>
 
         <menuitem action="launch_account_gt_libro_diario" id="menu_reporte_libro_diario" parent="account_gt.menu_reporte_libros_gt" sequence="10"/>
 
