--- a/wizard/libro_ventas_wizard_views.xml
+++ b/wizard/libro_ventas_wizard_views.xml
@@ -26,12 +26,14 @@
             </field>
         </record>
 
-        <act_window id="launch_account_gt_libro_ventas"
-                    name="Libro de ventas"
-                    binding_model="account.account"
-                    res_model="account_gt.libro_ventas.wizard"
-                    view_mode="form"
-                    target="new"/>
+        <record id="launch_account_gt_libro_ventas" model="ir.actions.act_window">
+            <field name="name">Libro de ventas</field>
+            <field name="res_model">account_gt.libro_ventas.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="account_gt_libro_ventas_form_view"/>
+            <field name="target">new</field>
+            <field name="binding_model_id" ref="account.model_account_account"/>
+        </record>
 
         <menuitem action="launch_account_gt_libro_ventas" id="menu_reporte_libro_ventas" parent="account_gt.menu_reporte_libros_gt"/>
 
