--- a/wizard/libro_ventas_wizard_views.xml
+++ b/wizard/libro_ventas_wizard_views.xml
@@ -17,7 +17,7 @@
                         <field name="archivo" readonly="1" filename="name"/>
                     </group>
                     <footer>
-                        <button name="print_report" type="object" string="Generar" class="oe_highlight"/>
+                        <!-- <button name="print_report" type="object" string="Generar" class="oe_highlight"/> -->
                         <button name="print_report_excel" string="Reporte excel" type="object" class="oe_highlight"/>
                         or
                         <button special="cancel" string="Cancel"/>
